# workshop-dbt-bigquery

./: .user.yml  README.md  dbt_project.yml  pyproject.toml
models/staging/: stg_orders.sql  stg_products.sql  stg_supplies.sql
seeds/: raw_stores.csv
snapshots/: stores_snapshot.sql
